NetBSD Problem Report #31540

From www@netbsd.org  Mon Oct 10 10:42:09 2005
Return-Path: <www@netbsd.org>
Received: by narn.netbsd.org (Postfix, from userid 31301)
	id E977763B878; Mon, 10 Oct 2005 10:42:09 +0000 (UTC)
Message-Id: <20051010104209.E977763B878@narn.netbsd.org>
Date: Mon, 10 Oct 2005 10:42:09 +0000 (UTC)
From: rudihl@gmx.de
Reply-To: rudihl@gmx.de
To: gnats-bugs@netbsd.org
Subject: iee0: iee_intr: receive ring buffer overrun
X-Send-Pr-Version: www-1.0

>Number:         31540
>Category:       port-hp700
>Synopsis:       iee0: iee_intr: receive ring buffer overrun
>Confidential:   no
>Severity:       serious
>Priority:       high
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Oct 10 10:43:00 +0000 2005
>Closed-Date:    Sun Apr 29 07:59:50 +0000 2007
>Last-Modified:  Sun Apr 29 07:59:50 +0000 2007
>Originator:     Rudi Ludwig
>Release:        3.99.8
>Organization:
-private-
>Environment:
NetBSD gecko 3.99.8 NetBSD 3.99.8 (GENERIC) #0: Sat Sep 10 04:25:01 UTC 2005  builds@works.netbsd.org:/home/builds/ab/HEAD/hp700/200509090000Z-obj/home/builds/ab/HEAD/src/sys/arch/hp700/compile/GENERIC hp700


>Description:

Set up: this is a HP 712/60 with 32MB RAM. It is a diskless setup with
root swap and usr as exports to the machine. Due to current keyboard problems it is only used to log in via ssh.

after several hours of uptime with low usage the machine started to 
print the following to the console,:

iee0: iee_intr: receive ring buffer overrun
receive error rfd status: 0x0000 rfd count: 0x0000

repeated over and over together with another status count that was increasing, but I failed to copy verbatimly from the screen. Parallel the machine became unreachable over the network, it did no longer respond to ping, xterms hung, etc.
>How-To-Repeat:

1- as said in "Full Description"

2- driving high utilisation e.g. start compiling a kernel or a package the machine will be unreachable over the network after about 10 to 15min. These lock-ups though did not print to the console, as above. In these ocasions the network "just" hung.
>Fix:

>Release-Note:

>Audit-Trail:
From: Rudi Ludwig <rudihl@gmx.de>
To: gnats-bugs@netbsd.org, port-hp700@netbsd.org
Cc: 
Subject: Re: kern/31540: iee0: iee_intr: receive ring buffer overrun
Date: Sat, 22 Apr 2006 16:30:11 +0200

 Some update:
 I got 128MB for my hp712 recently. As a side effect the hang-up
 in the Network as described in this PR does not happen any longer.

 The machine has now enough physical
 RAM to not use any of the swap e.g. while compiling a package
 in a nfs-mounted export which includes some network-traffic doing
 so.

 Thus it seams that the bug described is somehow related to using swap.

 Rudi

From: Nick Hudson <skrll@netbsd.org>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: PR/31540 CVS commit: src/sys/dev/ic
Date: Tue, 17 Apr 2007 14:12:07 +0000 (UTC)

 Module Name:	src
 Committed By:	skrll
 Date:		Tue Apr 17 14:12:07 UTC 2007

 Modified Files:
 	src/sys/dev/ic: i82596.c

 Log Message:
 Remove bogus if_drain. If an attempt to reclaim mbufs was made the
 interface was marked down.

 Should fix PR 31540.


 To generate a diff of this commit:
 cvs rdiff -r1.15 -r1.16 src/sys/dev/ic/i82596.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: skrll@netbsd.org
State-Changed-When: Tue, 17 Apr 2007 14:18:20 +0000
State-Changed-Why:
Would it be possible to try -current or sources with
src/sys/dev/ic/i82596.c revision 1.16?
Thanks, Nick


From: Manuel Bouyer <bouyer@netbsd.org>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: PR/31540 CVS commit: [netbsd-4] src/sys/dev/ic
Date: Fri, 20 Apr 2007 20:11:10 +0000 (UTC)

 Module Name:	src
 Committed By:	bouyer
 Date:		Fri Apr 20 20:11:10 UTC 2007

 Modified Files:
 	src/sys/dev/ic [netbsd-4]: i82596.c

 Log Message:
 Pull up following revision(s) (requested by skrll in ticket #580):
 	sys/dev/ic/i82596.c: revision 1.16
 Remove bogus if_drain. If an attempt to reclaim mbufs was made the
 interface was marked down.  Should fix PR 31540.


 To generate a diff of this commit:
 cvs rdiff -r1.14 -r1.14.8.1 src/sys/dev/ic/i82596.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Rudi Ludwig <rudihl@gmx.de>
To: gnats-bugs@NetBSD.org
Cc: skrll@netbsd.org
Subject: Re: re: port-hp700/31540
Date: Sat, 28 Apr 2007 17:03:43 +0200

 Feedback to
  (iee0: iee_intr: receive ring buffer overrun)

 with NetBSD head-20070421  I could not repeat
 above bug, thus I'd consider this one solved.


 Rudi

State-Changed-From-To: feedback->closed
State-Changed-By: skrll@netbsd.org
State-Changed-When: Sun, 29 Apr 2007 07:59:50 +0000
State-Changed-Why:
Submitter reports that the problem is fixed.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.