Remove bogus if_drain. If an attempt to reclaim mbufs was made the interface was marked down.

Should fix PR 31540.